# zk

./: Cargo.toml  README.md  zk
spec/: zk_spec.sh
spec/container/: Dockerfile  build.sh  get_cri.sh  run_tests.sh
src/: error.rs  frontmatter.rs  main.rs  zettel.rs  zettelkasten.rs
src/command/: init.rs  mod.rs  new.rs  sync.rs
src/database/: mod.rs  yaml.rs
test_zk/: 2022-07-27-my-blog-post.md  _zettel.yaml
zk.d/: check_for_update.sh
