[package]
name = "zk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
serde ={ version =  "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.1.2", features = ["v4", "serde"]}

[dev-dependencies]
tempdir = "0.3"
