[package]
name = "zk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
serde ={ version =  "1.0", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "serde"]}
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.10.2"
serde_yaml = "0.8"
rand = "0.8"

[dev-dependencies]
tempdir = "0.3"
extract-frontmatter = "4.1"
